--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -17,7 +17,7 @@
     <%= partial "shared/top_bar" %>
     <br>
     <div id="content">
-      <div id="content-left" class="content-left">
+      <div id="content-left" class="content-left" height="100%">
         <ul>
           <li><a href="/index.html"  hidefocus="true">html5的内容类型</a></li>
           <li><a href="/html/canvas/index.html"  hidefocus="true">Canvas</a></li>
@@ -27,6 +27,7 @@
           <li><a href="/html/websockets/index.html"  hidefocus="true">WebSockets</a></li>
           <li><a href="/html/forms/index.html">Forms</a></li>
           <li><a href="/html/forms/register.html">register</a></li>
+          <li><a href="/html/webworkers/index.html">WebWorkers</a></li>
         </ul>
       </div>
       <div id="content-right" class="content-right">
